# smart-learn

./: .gitignore  LICENSE  README.md  marketplace.json  plugin.json  pyproject.toml
.claude/commands/: smart-learn.md  smart-review.md  smart-search.md  smart-stats.md
.claude/skills/smart-learn/: SKILL.md  docx_utils.py  mindmap_utils.py
.claude/skills/smart-learn/templates/: 2-feynman.md  3-self-test.md  4-association.md
prompts/: universal-learn.md  universal-review.md  universal-search.md  universal-stats.md
prompts/templates/: 1-concept-map.md  4-association.md  5-summary.md
src/smart_learn/: __init__.py  cli.py  knowledge.py  mindmap.py
