[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "smart-learn"
version = "2.0.0"
description = "Smart Learn — AI-powered interactive learning using Feynman Technique. Works with any LLM."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "HYH926", email = "hyhxhw@qq.com"}]
keywords = [
    "learning", "feynman", "education", "knowledge-management",
    "mindmap", "mermaid", "docx", "claude", "ai-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Education",
]
requires-python = ">=3.9"

[project.optional-dependencies]
docx = ["python-docx>=0.8"]
all = ["python-docx>=0.8"]

[project.scripts]
smart-learn = "smart_learn.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
